--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -75,8 +75,6 @@ To characterize the nanoparticles before the embedding in a polymer, the iron ox
 \caption[TEM images of iron oxide nanoparticle]{TEM images of the iron oxide nanoparticles. From left to right: 5\,nm 10\,nm and 20\,nm nominal size in two different magnifications each (rows).}
 \label{fig:tem}
 \end{figure}
-.
-
 
 SAXS (small angle X-ray scattering) measurements of the prepared nanoparticle polymer foils are performed at the SSRL beamline 1-5. Samples are measured at 12\,keV for at two different spots for 5\,min each and averaged, a subtraction of the polymer matrix background is performed and a size distribution of spherical particles with hard-sphere interaction fitted to the radial profile. The low-q area is dominated by aggregate formation, which cannot be precisely quantified due to stray light and limited measuring range and is accounted for by a Guinier-Porod function, see \fref{fig:saxsps}  and  \fref{fig:saxspmma} \cite{percus1958,feigin1987,Ilavsky2009}.
 The measurements do not show a clear and significant difference between the two polymer matrices. According to the regressions, the aggregates seem to have a radius of gyration of 20-30\,nm (the straylight limits the measurement validity in those small q areas), the Porod parameter $P$ of 2.5-3.8 suggests a dimensionality of the aggregates between 2 and 3 \cite{feigin1987,lili2005}. The radii of the form factor agree within the corresponding margin of error with the values of determined by TEM measurements, the difference between the radius parameters of the structure factors and the form factor is most likely caused by the thin layer of oleic acid ligands between aggregating particles.
@@ -149,7 +147,7 @@ To image the focus, 500\,nm iron (Goodfellow), 10\,um iron (Nilaco), 5\,um (Nila
 \paragraph{Imaging Nanoparticles}
 For imaging the prepared iron nanoparticle and reference samples, the vacuum tube in front of the dual detector is partially removed to allow moving the octal detector, which will be the main imaging detector, to $d_\text{octal}\approx$43\,cm. The sample is slightly moved out of focus along the beam direction by 400\,um instead of using any attenuation to increase the number of fluorescence photons. In between the nanoparticle samples, a single 10\,um iron foil measurement using the dual detector is taken to confirm the beam conditions.
 \paragraph{Imaging Crystals}
-For imaging GaAs single crystal samples, the distance between the octal detector and the sample is shortened to $d_\text{octal}\approx$14\,cm (with the vacuum tube between the dual detector and the sample removed). To reduce the amount of non-fluorescence photons  (air scattering, coherent scattering in the sample etc.), as well as gallium K$_\beta$ fluorescence on the detector, a 25\,um zinc filter is installed on the filter holder. The crystal surface is aligned to be parallel to the detector plane, and the scanning direction are aligned to be along the crystal surface within less than 1°. The X-ray beam is attenuated by 0.4\,mm silicon, resulting in 20-30\,uJ pulse energy at the sample for pulse energies at the upstream energy monitors of 400\,uJ \cite{yabashi2015}.
+For imaging GaAs single crystal samples, the distance between the octal detector and the sample is shortened to $d_\text{octal}\approx$14\,cm (with the vacuum tube between the dual detector and the sample removed). To reduce the amount of non-fluorescence photons  (air scattering, coherent scattering in the sample etc.), as well as gallium K$_\beta$ fluorescence on the detector, a 25\,um zinc filter is installed on the filter holder. The crystal surface is aligned to be parallel to the detector plane, and the scanning direction are aligned to be along the crystal surface within less than 1°. The X-ray beam is attenuated by 0.4\,mm silicon, resulting in 20-30\,uJ pulse energy at the sample for pulse energies at the upstream energy monitors of 400\,uJ \cite{yabashi2015,tono2013}.
 
 \section{Data Processing and Analysis}
 As the amount of recorded data is huge, an efficient strategy for filtering on shots, preprocessing the data to eliminate interference and finally reconstruction has to be implemented.
