--- a/Tex/simulation.tex
+++ b/Tex/simulation.tex
@@ -1,30 +1,27 @@
 \chapter{Simulations}
 \label{chap:simulation}
-To illustrate the working principle of IDI and to examine the Signal-to-Noise  characteristics, different simulations were performed:\\
-First, it was assumed that the object to be imaged consists of discrete emitters, each emitting monochromatic spherical waves with the same wavelength, but with a randomly chosen phase, and the speckle image on a pixelated detector was simulated by addition of the scalar electric fields and taking the squared magnitude for each pixel. To reduce the influence of this discrete sampling on the simulated speckle patterns, the simulation is performed at XX the resolution and downsampled, such that each data point is the result of 4x4 discrete calculations
-In this configuration, the speckle images of a single particle with randomly positioned emitters inside (approximating a single particle imaging setup), a focal volume filled with randomly positioned (non intersecting) hard spheres consisting of randomly positioned atoms (approximating for example many spherical nano particles imaged simultaneously) as well as a crystalline structure with emitters positioned at within a lattice were simulated. In the first two cases, a small-angle regime was chosen and the reconstruction was performed in 2D and as a 1D radial profile. For the crystalline structure, a realistic lattice constant in the same order of magnitude as the K$\alpha$ wavelength moves the reconstruction out of the small-angle regime and a 3D reconstruction of the reciprocal space was performed.
+To illustrate the working principle of IDI and to examine the Signal-to-Noise characteristics, different simulations were performed:\\
+First, it was assumed that the object to be imaged consists of discrete emitters, each emitting monochromatic spherical waves with the same wavelength, but with a randomly chosen phase, and the speckle image on a pixelated detector was simulated by the addition of the scalar electric fields and taking the squared magnitude for each pixel. To reduce the influence of this discrete sampling on the simulated speckle patterns, the simulation is performed at XX the resolution and downsampled, such that each data point is the result of 4x4 discrete calculations.
+In this configuration, the speckle images of a single particle with randomly positioned emitters inside (approximating a single particle imaging setup), a focal volume filled with randomly positioned (non intersecting) hard spheres consisting of randomly positioned atoms (approximating, for example, many spherical nanoparticles imaged simultaneously) as well as a crystalline structure with emitters positioned at within a lattice were simulated. In the first two cases, a small-angle regime was chosen, and the reconstruction was performed in 2D and as a 1D radial profile. For the crystalline structure, a realistic lattice constant in the same order of magnitude as the K$\alpha$ wavelength moves the reconstruction out of the small-angle regime, and a 3D reconstruction of the reciprocal space was performed.
 Additionally, in these simulations the effect of under-sampling was studied.\\
 Secondly, to examine the influence of the fluorescence lifetime and pulse width, a time-resolved simulation was performed.
-The results were compared with the approximation, that the contrast is determined by the product of the different number of modes.
-
-Ultimately, the results of these simulations were used the determine the feasibility of an experimental setup using IDI
 
 
-
-
-
-
+Ultimately, the results of these simulations were used the determine the feasibility of an experimental setup using IDI.
 
 \section{Time Independent Simulations}
-In an infinite coherence time, stationary sources approximation, the simulation of the speckle pattern can be performed time independently the superposition of scaler electrical fields emitted with random phases. The simulation of the intensity at multiple discrete points can be performed in parallel using GPU acceleration, resulting in a simple and fast to evaluate model.
-
+In an infinite coherence time, stationary sources approximation, the simulation of the speckle pattern can be performed time independently the superposition of scalar electrical fields emitted with random phases $\phi_n$ from with $N$ excited atoms  at positions $r_n$ chosen randomly out of all possible atom positions inside the sample,
+\begin{equation}
+E(\vec{r})=\sum_n^N \frac{1}{\left|\vec{r}_n-\vec{r}\right|} e^{i(k_n{\left|\vec{r}_n-\vec{r}\right|}+\phi_n)} \,.
+\end{equation} 
+The simulation of the intensity $I=\left|E\right|^2$ at multiple discrete points $r$ on the simulated detector and Poisson sampling with mean photon numbers according to the number of simulated excited atoms, distance  and simulated pixelsize, can be performed in parallel using GPU acceleration, resulting in a simple and fast to evaluate model. 
 
 
 
 
 \subsection{Detector Effects}
 \label{sec:chargesharing}
-To simulate the influence of detector dependent charge-sharing and readout noise, an image degradation is performed: After Poisson sampling the simulated speckle image, for each photon an uniform random position within its pixel is chosen as the center of a Gaussian distribution with $\sigma$=0.1, pixel, similar to the size of the point spread function (PSF) for MPCCD detectors \cite{mpccd}.
+To simulate the influence of detector dependent charge-sharing and readout noise, an image degradation is performed: After Poisson sampling, the simulated speckle image, for each photon a uniform random position within its pixel is chosen as the center of a Gaussian distribution with $\sigma$=0.1, pixel, similar to the size of the point spread function (PSF) for MPCCD detectors \cite{mpccd}.
 The signal within each pixel caused by one photon is given by the integral over the Gaussian,
 \begin{equation*}
 	I(\Delta x,\Delta y)=\frac{1}{4} \left(\text{erf}\left(\frac{\sfrac{1}{2}-\Delta x}{\sqrt{2}
@@ -69,14 +66,14 @@ as $I\in \Re$ and $I_{n\geq N}$=0, greatly reducing the computational complexity
 The number of correlation pairs $N_p$ which contribute to the sum in \fref{eq:fftcorrelation} for each $q$ can be found by performing the same operations with a constant image (of the same shape) $M$ of all ones, leading to the numerator of $g^2$ being $\operatorname{AC}(I)/\operatorname{AC}(M)$ \cite{oppenheim2009,butz2015,nion2008}.
 
 \subsection{Normalisation}
-In the definition of the normalized intensity correlation (\fref{eq:g2}), normalization is performed by the product of the expectation values of the intensity at the two locations. As these expectation values are influenced by the sample, the geometry, and experimental imperfections, some considerations how to implement this normalization have to be made for calculating $g^2(\Delta\vec{q})$ from measured or simulated fluorescence speckle patterns. 
+In the definition $g^2$ (\fref{eq:g2}), normalization is performed by the product of the expectation values of the intensity at the two locations. As these expectation values are influenced by the sample, the geometry, and experimental imperfections, some considerations how to implement this normalization have to be made for calculating $g^2(\Delta\vec{q})$ from measured or simulated fluorescence speckle patterns. 
 If only a single image is taken, the expectation value for each pixel has to be approximated. This can be done by assuming an equal value for all pixels (and estimating by the mean), which will lead to significant artifacts if, for example, due to geometry outside pixels have a much lower true expectation value than pixels in the center of the recorded image.  
 
 For masked image registration and similiar tasks, the cross correlation is commonly normalized by the following (simplified to the relevant case of the autocorrelation) divisor \cite{padfield2010}:
 \begin{equation}
 \frac{\mathit{corr}(\mathit{mask},\mathit{image}) \mathit{corr}(\mathit{image},\mathit{mask})}{\mathit{corr}(\mathit{mask},\mathit{mask})} \,,
 \end{equation} which would correspond to estimation of the expectation values  y the mean over all pixels that form a pixel pair contributing to the value in the reconstruction at a particular $\Delta q$, giving an slightly different weighting to the pixels than first first calculating $g^2$ normalized by the true expectation values for each pair and afterwards averaging over the pairs.
-If multiple images are taken, under the assumption of ergodicity, the expectation value for each pixel can be approximated by its mean over many images. To account for fluctuations in the exciting FEL pulse and resulting fluctations of the fluorescence intensity, if it can be assumed that the distribution over pixel intensities and FEL intensities are uncorrelated, the photon detection probability of each pixel in each shot can be factorized into the product of the probability to detect a photon in a pixel and to detect a photon in a shot. Thus, the effect of the FEL intensity fluctuations can be suppressed by normalizing each image by the total intensity of the image. This normalization scheme will be used for all reconstructions in this thesis.
+If multiple images are taken, under the assumption of ergodicity, the expectation value for each pixel can be approximated by its mean over many images. To account for fluctuations in the exciting FEL pulse and resulting fluctuations of the fluorescence intensity, if it can be assumed that the distribution over pixel intensities and FEL intensities are uncorrelated, the photon detection probability of each pixel in each shot can be factorized into the product of the probability to detect a photon in a pixel and to detect a photon in a shot. Thus, the effect of the FEL intensity fluctuations can be suppressed by normalizing each image by the total intensity. This normalization scheme will be used for all reconstructions in this thesis.
 For brevity, a detailed comparison of the different normalization approaches is not shown. Still, the successful reconstructions of the reciprocal space, for both wide and small angle simulations with varying amounts of noise and simulated photon numbers, without any pedestal ($g^2(\infty)\not\approx 1$) or strong artifacts throughout this chapter show that the applied normalization is sufficient.  
 
 
@@ -147,20 +144,16 @@ The noise thresholding is done with a threshold of three times the standard devi
 	\end{adjustwidth}
 \end{table}
 
-To evaluate the different approaches, for a grating with pitch 50\,nm, line width 20\,nm and 100\,nm thickness in a 400\,nm (FWHM) focus, resulting in $10^7$ excited atoms emitting at 10\,keV and a 1024x1024 pixel detector with 50\,um pixel size in 50\,cm distance, independent, 2000 florescence images are simulated. Three different cases are considered: With high signal ($10^5 $photons/image), low signal ($10^4$ photons/image), both having $10^3$ photons at 13\,keV as scattering noise and 500\,ev (gaussian) detector noise as a "high noise" case  with 2.5\,times the scattering and 2\,times the detector noise  ($10^4$ signal photons/image). Charge sharing is in all cases simulated with $\sigma$=5\,um.  For each photon counting approach, reconstructions are performed in all the cases and compared to a reconstruction without noise or charge sharing as ground truth. For the first two cases, the center part of the reconstructions is show in \fref{fig:photonreconimg}, line profiles through the center and the first maximum for all cases are shown in \fref{fig:photonrecon}. In the different reconstructions, two effects are visible: In comparison with the ground truth, without any correction the reconstruction for low $q$ is be overestimated due to the correlation of neighboring pixels and underestimated for the first maximum (see \fref{tab:photonrecon} for detailed values). This can be slighlty reduced by thresholding, and greatly reduced by rounding to the closest combination as well as by the maximum likelihood classification. The PSANA droplet algorithm seems to join more neighboring photons than necessary, resulting in an incorrect negative correlation between neighboring pixels.  These observations in the simulation suggest using either the combination scheme or the classifier for an experiment, and both are evaluated on the experimental data in \fref{chap:experiment}.
-
-Possible avenues for improvement would be to use a more sophisticated droplet scheme based on error minimization allowing for subpixel resolution, incorporating the scattering photons into the droplet algorithm or using a neural network trained on synthetic images \cite{baumann2018,collaboration2014,schayck2020}
-
-
+To evaluate the different approaches, for a grating with pitch 50\,nm, line width 20\,nm and 100\,nm thickness in a 400\,nm (FWHM) focus, resulting in $10^7$ excited atoms emitting at 10\,keV and a 1024x1024 pixel detector with 50\,um pixel size in 50\,cm distance, independent, 2000 florescence images are simulated. Three different cases are considered: With high signal ($10^5 $photons/image), low signal ($10^4$ photons/image), both having $10^3$ photons at 13\,keV as scattering noise and 500\,ev (gaussian) detector noise as a "high noise" case  with 2.5\,times the scattering and 2\,times the detector noise  ($10^4$ signal photons/image). Charge sharing is in all cases simulated with $\sigma$=5\,um.  For each photon counting approach, normalized intensity correlations are calculated and compared to a reconstruction without noise or charge sharing as ground truth. For the first two cases, the center part of the correlation is show in \fref{fig:photonreconimg}, line profiles through the center and the first maximum for all cases are shown in \fref{fig:photonrecon}. In the different reconstructions, two effects are visible: In comparison with the ground truth, without any correction $g^2$ for low $q$ is be overestimated due to the correlation of neighboring pixels by charge sharing and underestimated for the first maximum (see \fref{tab:photonrecon} for detailed values). This can be slightly reduced by thresholding, and greatly reduced by rounding to the closest combination as well as by the maximum likelihood classification. The PSANA droplet algorithm seems to join more neighboring photons than necessary, resulting in an incorrect negative correlation between neighboring pixels.  
 
 \subsection{Accessible Reciprocal Space}
-	\paragraph{Accessible Reciprocal Space}
+
 	As IDI is based on $g^2(\Delta \vec{q})$, for a ...  $q$ determined by the experimental geometry ($k$, detector size and distance), IDI can achieve higher $\left|\vec{q}\right|$ than a scattering setup, increasing the numerical aperture and could in theory be used to achieve a higher resolution. In practice, for most samples the resolution will be limited by the $q^{-4}$ dependence of $S$ and the SNR, thus only increasing the resolution for samples with strong features at high $q$.
 	
 	Compared to CDI, which measures $\vec{q}$ on the Ewald sphere and gives only limited $q_z$ information, IDI with a flat detector can give access  to a three dimensional volume in reciprocal space, as shown in \fref{fig:accesibleq} and, with greater $q_z$ coverage the greater the curvature of the Ewald sphere is. This, for example, gives access to multiple Bragg peaks in a single crystal experiment as shown in \fref{fig:accesiblebraggq}. 
 		
 	
-	\paragraph{Detector Size and SNR}
+\subsection{Detector Size and SNR}
 	
 	To asses the influence of the number of pixels of an detector (and correlation pairs) on the SNR, a simulation for a 1\,um thick Copper foil in an 100\,nm FWHM focus is performed. The detector size was varied from 64x64 to 3072x3072 pixels and always placed at the same distance of 1\,m, keeping the mean photon count per pixel constant. For the SNR calculations, the signal is defined as, the noise as the standard deviation XXX
 	As show in \fref{fig:SNRdetsize}, under these conditions, the SNR is proportional to the square root of the number of pixels of the detector.
@@ -323,15 +316,14 @@ E(t_n)=E(t_{n-1})*e^{\sfrac{t_{n-1}-t_n}{\tau}}+E_n
 This procedure is efficient in regards of discrete time steps that need to be calculated and can easily be run on a GPU.
 
 \subsection{Influence of the Pulse Length}
-For a sphere with 10\,nm radius consisting of $2*10^5$ atoms emitting 6.4\,keV fluorescence captured by an 256x256@50\,um detector in 20\,cm distance, the speckle strength (calculated as the standard deviation of the speckle pattern over the mean) of a series of simulations with different decay times $\tau$ of the emission and different FWHM of the exciting Gaussian pulse are shown in \fref{fig:tdpshere_specke}.  These follow the $1/\sqrt{erfcx(2\sigma/\tau})$ relation as predicted by the theory.  For each simulation, a reconstruction can be performed, resulting in radial profiles as shown for one $\tau$ in \fref{fig:tdpshere_recon}. The visibility of the reconstructions (\fref{fig:tdsphere_vis}) shows the for long pulses a reciprocal relationship.
+For a sphere with 10\,nm radius consisting of $2*10^5$ atoms emitting 6.4\,keV fluorescence captured by an 256x256@50\,um detector in 20\,cm distance, the speckle strength (calculated as the standard deviation of the speckle pattern over the mean) of a series of simulations with different decay times $\tau$ of the emission and different FWHM of the exciting Gaussian pulse are shown in \fref{fig:tdpshere_specke}.  These follow the $1/\sqrt{erfcx(2\sigma/\tau})$ relation as predicted by the estimation of the number of modes.  For each simulation, a reconstruction can be performed, resulting in radial profiles as shown for one $\tau$ in \fref{fig:tdpshere_recon}. The visibility of the reconstructions (\fref{fig:tdsphere_vis}) shows the for long pulses a reciprocal relationship.
 
 \subsection{Influence of the Sample Thickness}
-To investigate the influence of the sample thickness, the speckle strength in a simulation is shown in \fref{fig:thickness}. In this simulation, a constant number ($10^6$) of 8\,keV emitters are placed inside a 200\,nm x 200\,nm (FWHM) Gaussian volume with varying thickness. To ensure sufficient sampling of the speckle pattern, the axis of varying thickness is always set perpendicular to the detector. The 64x64 pixel (pixelsize 100\,um) detector is placed in 1\,m distance. The simulation is performed with 4x oversampling and rebinning in both directions. The varying viewing angle $\alpha$ influences only the mean (for each emitter) of the 1\,fs FWHM Gaussian from which the emission is sampled without influencing the overall volume in which the emitters are placed. Therefore, the change in SNR is only caused by the finite coherence time $\tau=1\,fs$, not by a change of the speckle size. Furthermore, no shot noise is considered in the simulation.
-This simulations show that in high angles the limited coherence length of the fluorescence reduces the speckle SNR for thick samples, whereas in small angles, the sample thickness does not influence the SNR: In the 0° limit, the thickness is in beam direction and the position of an emitter along this axis does not change the arrival time of its contribution the the speckle pattern, as the path lengh difference $\Delta$ caused by the sample thickness $t$ is (with the transversal distance between sample and detector $z$ and the lateral distance $x$)
+To investigate the influence of the sample thickness, the speckle strength in a simulation is shown in \fref{fig:thickness}. In this simulation, a constant number ($10^6$) of 8\,keV emitters are placed inside a 200\,nm x 200\,nm (FWHM) Gaussian volume with varying thickness.  The axis of varying thickness is always set perpendicular to the detector, and the viewing angle $\alpha$ does not change the overall volume in which the emitters are placed, ensuring a constant speckle size. Therefore, the change in SNR is only caused by the finite coherence time $\tau$=1\,fs and the 1\,fs FWHM Gaussian from which the emission times are sampled, not by a change of the sampling conditions. The 64x64 pixel (pixelsize 100\,um) detector is placed in 1\,m distance. The simulation is performed with 4x oversampling and rebinning in both directions.  
+These simulations show that in high angles, the limited coherence length of the fluorescence reduces the speckle SNR for thick samples, whereas in small angles, the sample thickness does not influence the SNR: In the 0° limit, the thickness is in beam direction and the position of an emitter along this axis does not change the arrival time of its contribution the speckle pattern, as the path length difference $\Delta$ caused by the sample thickness $t$ is (with the transversal distance between the sample and detector $z$ and the lateral distance $x$)
 \begin{equation}
 	\Delta=z+\sqrt{z^2+x^2}-\sqrt{(z+t)^2+x^2} \approx(1-\cos (\alpha)) t=\frac{k^2}{\left|\vec{q}\right|^2}t \,.
 \end{equation}
-
 
 
  As a thicker sample gives more photons and therefore less Poisson noise, but a higher number of temporal and spatial modes, thus a lower expected lower speckle visibility, a simulation close to experimentally feasible parameters is desirable.
@@ -386,11 +378,19 @@ This simulations show that in high angles the limited coherence length of the fl
 
 \section{Summary and Discussion of the Implications for an Experiment}
 
-The time dependent simulation of different samples and realistic conditions allows to estimate the number of images necessary for a successful IDI measurement: The result of a full simulation for a thick 5\,um Copper foil, rotated 45° with respect to the beam (200\,nm focus FWHM, 10\,fs pulse FWHM), measured with an detector with 50\,um pixel size (charge sharing $\sigma$=5\,um) placed in a distance of 1\,m perpendicular to the beam is shown in \fref{fig:simfoil}. Even tough the under sampling in the horizontal direction, causes an significant reduction in signal strength, ~100 images suffice in the simulation to get an acceptable SNR to clearly see the focal size, leading to the estimation that even with additional noise sources not included in the simulation, less than 1000 images would suffice for an replication of the previously published results \cite{nakumura2020}.
+The insights about the influence of different numbers of spherical samples inside the focus will guide the preparation of nanoparticle samples: By depositing the nanoparticles in a polymer matrix at a concentration that is on the one hand high enough to make use of the gain in signal photons but on the other hand low enough not to lose contrast in the form factor.
 
-The insights about the influence of different numbers of spherical samples inside the focus will guide the preperation of nanoparticle samples: By depositing the nanoparticles in a polymer matrix at a concentration which is on the one hand high enough to make use of the gain in signal photons but on the other hand low enough not to loose contrast in the form factor.
 
-The most relevant implications for imaging single crystals are: First, there is a trade-off  between the number of signal photons, undersampling and loss of speckle contrast due to the path length difference by cause by the sample thickness, suggesting to use few micrometer thick samples. Second, the orientation of the detector with regards to the sample has to be aligned reliably, as the reconstructed reciprocal volume is large compared to the size of the expected Bragg peaks and additionally, the coverage in $q_z$ direction is finite (and depends on the detector position, size and masks applied) - bad alignment could therefor lead to fewer potential Bragg positions being inside the reconstruced reciprocal space than optimal. For a GaAs single crystals and a centered octal-MPCCD detector as available at SACLA, the sample-detector distance has to be 12-15\,cm and the alignment can be off by at most 1°
+
+The time-dependent simulation of different samples and realistic conditions allows to estimate the number of images necessary for a successful IDI measurement: The result of a full simulation for a thick 5\,um Copper foil, rotated 45° with respect to the beam (200\,nm focus FWHM, 10\,fs pulse FWHM), measured with a detector with 50\,um pixel size (charge sharing $\sigma$=5\,um) placed in a distance of 1\,m perpendicular to the beam is shown in \fref{fig:simfoil}. Even though the under-sampling in the horizontal direction causes a significant reduction in signal strength, ~100 images suffice in the simulation to get an acceptable SNR to clearly see the focal size, leading to the estimation that even with additional noise sources not included in the simulation, less than 1000 images would suffice for a replication of the previously published results \cite{nakumura2020}.
+
+The agreement between the time-dependent simulation with the approximation of the number of modes overlaid in the measurement allows to simplify the simulation of samples with many excited atoms (>$10^6$) and long pulse lengths, as the time-independent simulation is, despite the applied optimizations, still much faster to perform.
+
+The most relevant implications for imaging single crystals are: First, there is a trade-off between the number of signal photons, undersampling, and loss of speckle contrast due to the path length difference caused by the sample thickness, suggesting to use few micrometer thick samples. Second, the orientation of the detector with regards to the sample has to be aligned reliably, as the reconstructed reciprocal volume is large compared to the size of the expected Bragg peaks, and additionally, the coverage in $q_z$ direction is finite (and depends on the detector position, size and masks applied) - bad alignment could therefor lead to fewer potential Bragg positions being inside the reconstructed reciprocal space than optimal. For GaAs single crystals and a centered octal-MPCCD detector as available at SACLA, the sample-detector distance has to be 12-15\,cm and the alignment can be off by at most 1°.
+
+According to the comparison of the different photon-counting methods, discretizing the recorded detector values by finding appropriate thresholds for the different numbers of signal photons reduces detector effects and should be used to analyze experimental data. Nevertheless, directly neighboring pixels may still be influenced, and their calculated correlations should not be considered trustworthy for determining the structure factor.
+
+
 
 
 
