--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -240,8 +240,8 @@ Furthermore, a third way of photon counting is done by simple rounding to the cl
 
 
 
-
-As shown in \fref{fig:spectrum}, the background corrected and masked spectrum of the detector shows peaks at multiplex of the fluorescence and excitation energy with a FWHM of .... . 
+XXX
+%As shown in \fref{fig:spectrum}, the background corrected and masked spectrum of the detector shows peaks at multiples of the %fluorescence and excitation energy with a FWHM of .... . 
 
 
 As discussed in \fref{chap:simulation}, the number of fluorescence photons can be estimated...
