--- a/Tex/simulation.tex
+++ b/Tex/simulation.tex
@@ -160,7 +160,7 @@ To evaluate the different approaches, for a grating with pitch 50\,nm, line widt
 
 
 
-\begin{figure}[!htb]
+\begin{figure}
 	\centering
 	\begin{tabular}[t]{cc}
 		\begin{tabular}{c}
@@ -316,7 +316,7 @@ E(t_n)=E(t_{n-1})*e^{\sfrac{t_{n-1}-t_n}{\tau}}+E_n
 This procedure is efficient in regards of discrete time steps that need to be calculated and can easily be run on a GPU.
 
 \subsection{Influence of the Pulse Length}
-For a sphere with 10\,nm radius consisting of $2*10^5$ atoms emitting 6.4\,keV fluorescence captured by an 256x256@50\,um detector in 20\,cm distance, the speckle strength (calculated as the standard deviation of the speckle pattern over the mean) of a series of simulations with different decay times $\tau$ of the emission and different FWHM of the exciting Gaussian pulse are shown in \fref{fig:tdpshere_specke}.  These follow the $1/\sqrt{erfcx(2\sigma/\tau})$ relation as predicted by the estimation of the number of modes.  For each simulation, a reconstruction can be performed, resulting in radial profiles as shown for one $\tau$ in \fref{fig:tdpshere_recon}. The visibility of the reconstructions (\fref{fig:tdsphere_vis}) shows the for long pulses a reciprocal relationship.
+For a sphere with 10\,nm radius consisting of $2*10^5$ atoms emitting 6.4\,keV fluorescence captured by an 256x256@50\,um detector in 20\,cm distance, the speckle strength (calculated as the standard deviation of the speckle pattern over the mean) of a series of simulations with different decay times $\tau$ of the emission and different FWHM of the exciting Gaussian pulse are shown in \fref{fig:pulsedecay}.  These follow the $1/\sqrt{erfcx(2\sigma/\tau})$ relation as predicted by the estimation of the number of modes.  For each simulation, a reconstruction can be performed, resulting in radial profiles as shown for one $\tau$ in \fref{fig:tdpshere}. The visibility of the reconstructions (\fref{fig:tdpshere_visrecons}) shows the for long pulses a reciprocal relationship.
 
 \subsection{Influence of the Sample Thickness}
 To investigate the influence of the sample thickness, the speckle strength in a simulation is shown in \fref{fig:thickness}. In this simulation, a constant number ($10^6$) of 8\,keV emitters are placed inside a 200\,nm x 200\,nm (FWHM) Gaussian volume with varying thickness.  The axis of varying thickness is always set perpendicular to the detector, and the viewing angle $\alpha$ does not change the overall volume in which the emitters are placed, ensuring a constant speckle size. Therefore, the change in SNR is only caused by the finite coherence time $\tau$=1\,fs and the 1\,fs FWHM Gaussian from which the emission times are sampled, not by a change of the sampling conditions. The 64x64 pixel (pixelsize 100\,um) detector is placed in 1\,m distance. The simulation is performed with 4x oversampling and rebinning in both directions.  
@@ -361,6 +361,7 @@ These simulations show that in high angles, the limited coherence length of the 
 		\centering
 		\includegraphics[width=\linewidth]{images/timedependent_2.pdf}
 		\caption{Visibility of the reconstruction for different pulse FWHM and decay times $\tau$}
+		\label{fig:tdpshere_visrecons}
 	\end{subfigure}
 	\hspace{0.1cm}
 	\begin{subfigure}[b]{0.45\textwidth}
